generated/SimpleMathParser.py
# Generated from SimpleMathParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SimpleMathParser ( Parser ):

    grammarFileName = "SimpleMathParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+'", "'-'", "'*'", "'/'", "';'", 
                     "'('", "')'", "'{'", "'}'", "'!'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'=='", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "'if'", "'else'", "'while'", 
                     "'break'", "'print'", "'def'", "'return'" ]

    symbolicNames = [ "<INVALID>", "EQUAL", "ADD", "SUBTRACT", "MULTIPLY", 
                      "DIVIDE", "SEMI", "BRACE_L", "BRACE_R", "CURLY_L", 
                      "CURLY_R", "EXCL", "COMMA", "VARIABLE", "COMMENT", 
                      "NUMBER", "STR", "COMPARE_EQ", "COMPARE_NE", "COMPARE_G", 
                      "COMPARE_GE", "COMPARE_L", "COMPARE_LE", "IF", "ELSE", 
                      "WHILE", "BREAK", "PRINT", "DEF", "RETURN", "NAME", 
                      "WS" ]

    RULE_script = 0
    RULE_body = 1
    RULE_command = 2
    RULE_if_command = 3
    RULE_else_command = 4
    RULE_while_command = 5
    RULE_break_command = 6
    RULE_print_command = 7
    RULE_function_command = 8
    RULE_function_call = 9
    RULE_return_command = 10
    RULE_comment = 11
    RULE_assign = 12
    RULE_value = 13

    ruleNames =  [ "script", "body", "command", "if_command", "else_command", 
                   "while_command", "break_command", "print_command", "function_command", 
                   "function_call", "return_command", "comment", "assign", 
                   "value" ]

    EOF = Token.EOF
    EQUAL=1
    ADD=2
    SUBTRACT=3
    MULTIPLY=4
    DIVIDE=5
    SEMI=6
    BRACE_L=7
    BRACE_R=8
    CURLY_L=9
    CURLY_R=10
    EXCL=11
    COMMA=12
    VARIABLE=13
    COMMENT=14
    NUMBER=15
    STR=16
    COMPARE_EQ=17
    COMPARE_NE=18
    COMPARE_G=19
    COMPARE_GE=20
    COMPARE_L=21
    COMPARE_LE=22
    IF=23
    ELSE=24
    WHILE=25
    BREAK=26
    PRINT=27
    DEF=28
    RETURN=29
    NAME=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(SimpleMathParser.BodyContext,0)


        def getRuleIndex(self):
            return SimpleMathParser.RULE_script

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = SimpleMathParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleMathParser.CommandContext)
            else:
                return self.getTypedRuleContext(SimpleMathParser.CommandContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleMathParser.CommentContext)
            else:
                return self.getTypedRuleContext(SimpleMathParser.CommentContext,i)


        def getRuleIndex(self):
            return SimpleMathParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = SimpleMathParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleMathParser.VARIABLE) | (1 << SimpleMathParser.COMMENT) | (1 << SimpleMathParser.IF) | (1 << SimpleMathParser.WHILE) | (1 << SimpleMathParser.BREAK) | (1 << SimpleMathParser.PRINT) | (1 << SimpleMathParser.DEF) | (1 << SimpleMathParser.RETURN) | (1 << SimpleMathParser.NAME))) != 0):
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SimpleMathParser.VARIABLE, SimpleMathParser.IF, SimpleMathParser.WHILE, SimpleMathParser.BREAK, SimpleMathParser.PRINT, SimpleMathParser.DEF, SimpleMathParser.RETURN, SimpleMathParser.NAME]:
                    self.state = 30
                    self.command()
                    pass
                elif token in [SimpleMathParser.COMMENT]:
                    self.state = 31
                    self.comment()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(SimpleMathParser.AssignContext,0)


        def SEMI(self):
            return self.getToken(SimpleMathParser.SEMI, 0)

        def if_command(self):
            return self.getTypedRuleContext(SimpleMathParser.If_commandContext,0)


        def while_command(self):
            return self.getTypedRuleContext(SimpleMathParser.While_commandContext,0)


        def break_command(self):
            return self.getTypedRuleContext(SimpleMathParser.Break_commandContext,0)


        def print_command(self):
            return self.getTypedRuleContext(SimpleMathParser.Print_commandContext,0)


        def function_command(self):
            return self.getTypedRuleContext(SimpleMathParser.Function_commandContext,0)


        def function_call(self):
            return self.getTypedRuleContext(SimpleMathParser.Function_callContext,0)


        def return_command(self):
            return self.getTypedRuleContext(SimpleMathParser.Return_commandContext,0)


        def getRuleIndex(self):
            return SimpleMathParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = SimpleMathParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleMathParser.VARIABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.assign()
                self.state = 38
                self.match(SimpleMathParser.SEMI)
                pass
            elif token in [SimpleMathParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.if_command()
                pass
            elif token in [SimpleMathParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.while_command()
                pass
            elif token in [SimpleMathParser.BREAK]:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.break_command()
                self.state = 43
                self.match(SimpleMathParser.SEMI)
                pass
            elif token in [SimpleMathParser.PRINT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 45
                self.print_command()
                self.state = 46
                self.match(SimpleMathParser.SEMI)
                pass
            elif token in [SimpleMathParser.DEF]:
                self.enterOuterAlt(localctx, 6)
                self.state = 48
                self.function_command()
                pass
            elif token in [SimpleMathParser.NAME]:
                self.enterOuterAlt(localctx, 7)
                self.state = 49
                self.function_call()
                self.state = 50
                self.match(SimpleMathParser.SEMI)
                pass
            elif token in [SimpleMathParser.RETURN]:
                self.enterOuterAlt(localctx, 8)
                self.state = 52
                self.return_command()
                self.state = 53
                self.match(SimpleMathParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_if_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfCommandSingleContext(If_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.If_commandContext
            super().__init__(parser)
            self.elseBody = None # Else_commandContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(SimpleMathParser.IF, 0)
        def BRACE_L(self):
            return self.getToken(SimpleMathParser.BRACE_L, 0)
        def value(self):
            return self.getTypedRuleContext(SimpleMathParser.ValueContext,0)

        def BRACE_R(self):
            return self.getToken(SimpleMathParser.BRACE_R, 0)
        def command(self):
            return self.getTypedRuleContext(SimpleMathParser.CommandContext,0)

        def else_command(self):
            return self.getTypedRuleContext(SimpleMathParser.Else_commandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfCommandSingle" ):
                return visitor.visitIfCommandSingle(self)
            else:
                return visitor.visitChildren(self)


    class IfCommandBodyContext(If_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.If_commandContext
            super().__init__(parser)
            self.elseBody = None # Else_commandContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(SimpleMathParser.IF, 0)
        def BRACE_L(self):
            return self.getToken(SimpleMathParser.BRACE_L, 0)
        def value(self):
            return self.getTypedRuleContext(SimpleMathParser.ValueContext,0)

        def BRACE_R(self):
            return self.getToken(SimpleMathParser.BRACE_R, 0)
        def CURLY_L(self):
            return self.getToken(SimpleMathParser.CURLY_L, 0)
        def body(self):
            return self.getTypedRuleContext(SimpleMathParser.BodyContext,0)

        def CURLY_R(self):
            return self.getToken(SimpleMathParser.CURLY_R, 0)
        def else_command(self):
            return self.getTypedRuleContext(SimpleMathParser.Else_commandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfCommandBody" ):
                return visitor.visitIfCommandBody(self)
            else:
                return visitor.visitChildren(self)



    def if_command(self):

        localctx = SimpleMathParser.If_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_command)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = SimpleMathParser.IfCommandBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.match(SimpleMathParser.IF)
                self.state = 58
                self.match(SimpleMathParser.BRACE_L)
                self.state = 59
                self.value(0)
                self.state = 60
                self.match(SimpleMathParser.BRACE_R)
                self.state = 61
                self.match(SimpleMathParser.CURLY_L)
                self.state = 62
                self.body()
                self.state = 63
                self.match(SimpleMathParser.CURLY_R)
                self.state = 65
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 64
                    localctx.elseBody = self.else_command()


                pass

            elif la_ == 2:
                localctx = SimpleMathParser.IfCommandSingleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(SimpleMathParser.IF)
                self.state = 68
                self.match(SimpleMathParser.BRACE_L)
                self.state = 69
                self.value(0)
                self.state = 70
                self.match(SimpleMathParser.BRACE_R)
                self.state = 71
                self.command()
                self.state = 73
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 72
                    localctx.elseBody = self.else_command()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_else_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ElseCommandBodyContext(Else_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.Else_commandContext
            super().__init__(parser)
            self.elseBody = None # BodyContext
            self.copyFrom(ctx)

        def ELSE(self):
            return self.getToken(SimpleMathParser.ELSE, 0)
        def CURLY_L(self):
            return self.getToken(SimpleMathParser.CURLY_L, 0)
        def CURLY_R(self):
            return self.getToken(SimpleMathParser.CURLY_R, 0)
        def body(self):
            return self.getTypedRuleContext(SimpleMathParser.BodyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseCommandBody" ):
                return visitor.visitElseCommandBody(self)
            else:
                return visitor.visitChildren(self)


    class ElseCommandSingleContext(Else_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.Else_commandContext
            super().__init__(parser)
            self.elseLine = None # CommandContext
            self.copyFrom(ctx)

        def ELSE(self):
            return self.getToken(SimpleMathParser.ELSE, 0)
        def command(self):
            return self.getTypedRuleContext(SimpleMathParser.CommandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseCommandSingle" ):
                return visitor.visitElseCommandSingle(self)
            else:
                return visitor.visitChildren(self)



    def else_command(self):

        localctx = SimpleMathParser.Else_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_else_command)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = SimpleMathParser.ElseCommandBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(SimpleMathParser.ELSE)
                self.state = 78
                self.match(SimpleMathParser.CURLY_L)
                self.state = 79
                localctx.elseBody = self.body()
                self.state = 80
                self.match(SimpleMathParser.CURLY_R)
                pass

            elif la_ == 2:
                localctx = SimpleMathParser.ElseCommandSingleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(SimpleMathParser.ELSE)
                self.state = 83
                localctx.elseLine = self.command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_while_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileCommandSingleContext(While_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.While_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(SimpleMathParser.WHILE, 0)
        def BRACE_L(self):
            return self.getToken(SimpleMathParser.BRACE_L, 0)
        def value(self):
            return self.getTypedRuleContext(SimpleMathParser.ValueContext,0)

        def BRACE_R(self):
            return self.getToken(SimpleMathParser.BRACE_R, 0)
        def command(self):
            return self.getTypedRuleContext(SimpleMathParser.CommandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileCommandSingle" ):
                return visitor.visitWhileCommandSingle(self)
            else:
                return visitor.visitChildren(self)


    class WhileCommandBodyContext(While_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.While_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(SimpleMathParser.WHILE, 0)
        def BRACE_L(self):
            return self.getToken(SimpleMathParser.BRACE_L, 0)
        def value(self):
            return self.getTypedRuleContext(SimpleMathParser.ValueContext,0)

        def BRACE_R(self):
            return self.getToken(SimpleMathParser.BRACE_R, 0)
        def CURLY_L(self):
            return self.getToken(SimpleMathParser.CURLY_L, 0)
        def body(self):
            return self.getTypedRuleContext(SimpleMathParser.BodyContext,0)

        def CURLY_R(self):
            return self.getToken(SimpleMathParser.CURLY_R, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileCommandBody" ):
                return visitor.visitWhileCommandBody(self)
            else:
                return visitor.visitChildren(self)



    def while_command(self):

        localctx = SimpleMathParser.While_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while_command)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = SimpleMathParser.WhileCommandBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(SimpleMathParser.WHILE)
                self.state = 87
                self.match(SimpleMathParser.BRACE_L)
                self.state = 88
                self.value(0)
                self.state = 89
                self.match(SimpleMathParser.BRACE_R)
                self.state = 90
                self.match(SimpleMathParser.CURLY_L)
                self.state = 91
                self.body()
                self.state = 92
                self.match(SimpleMathParser.CURLY_R)
                pass

            elif la_ == 2:
                localctx = SimpleMathParser.WhileCommandSingleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(SimpleMathParser.WHILE)
                self.state = 95
                self.match(SimpleMathParser.BRACE_L)
                self.state = 96
                self.value(0)
                self.state = 97
                self.match(SimpleMathParser.BRACE_R)
                self.state = 98
                self.command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Break_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_break_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BreakCommandContext(Break_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.Break_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BREAK(self):
            return self.getToken(SimpleMathParser.BREAK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakCommand" ):
                return visitor.visitBreakCommand(self)
            else:
                return visitor.visitChildren(self)



    def break_command(self):

        localctx = SimpleMathParser.Break_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_break_command)
        try:
            localctx = SimpleMathParser.BreakCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(SimpleMathParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_print_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintCommandContext(Print_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.Print_commandContext
            super().__init__(parser)
            self.printParams = None # ValueContext
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(SimpleMathParser.PRINT, 0)
        def BRACE_L(self):
            return self.getToken(SimpleMathParser.BRACE_L, 0)
        def BRACE_R(self):
            return self.getToken(SimpleMathParser.BRACE_R, 0)
        def value(self):
            return self.getTypedRuleContext(SimpleMathParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintCommand" ):
                return visitor.visitPrintCommand(self)
            else:
                return visitor.visitChildren(self)



    def print_command(self):

        localctx = SimpleMathParser.Print_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_print_command)
        self._la = 0 # Token type
        try:
            localctx = SimpleMathParser.PrintCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(SimpleMathParser.PRINT)
            self.state = 105
            self.match(SimpleMathParser.BRACE_L)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleMathParser.SUBTRACT) | (1 << SimpleMathParser.BRACE_L) | (1 << SimpleMathParser.EXCL) | (1 << SimpleMathParser.VARIABLE) | (1 << SimpleMathParser.NUMBER) | (1 << SimpleMathParser.STR) | (1 << SimpleMathParser.NAME))) != 0):
                self.state = 106
                localctx.printParams = self.value(0)


            self.state = 109
            self.match(SimpleMathParser.BRACE_R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_function_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionCommandContext(Function_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.Function_commandContext
            super().__init__(parser)
            self.funcName = None # Token
            self.copyFrom(ctx)

        def DEF(self):
            return self.getToken(SimpleMathParser.DEF, 0)
        def BRACE_L(self):
            return self.getToken(SimpleMathParser.BRACE_L, 0)
        def BRACE_R(self):
            return self.getToken(SimpleMathParser.BRACE_R, 0)
        def CURLY_L(self):
            return self.getToken(SimpleMathParser.CURLY_L, 0)
        def body(self):
            return self.getTypedRuleContext(SimpleMathParser.BodyContext,0)

        def CURLY_R(self):
            return self.getToken(SimpleMathParser.CURLY_R, 0)
        def NAME(self):
            return self.getToken(SimpleMathParser.NAME, 0)
        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleMathParser.VARIABLE)
            else:
                return self.getToken(SimpleMathParser.VARIABLE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCommand" ):
                return visitor.visitFunctionCommand(self)
            else:
                return visitor.visitChildren(self)



    def function_command(self):

        localctx = SimpleMathParser.Function_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_command)
        self._la = 0 # Token type
        try:
            localctx = SimpleMathParser.FunctionCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(SimpleMathParser.DEF)
            self.state = 112
            localctx.funcName = self.match(SimpleMathParser.NAME)
            self.state = 113
            self.match(SimpleMathParser.BRACE_L)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleMathParser.VARIABLE:
                self.state = 114
                self.match(SimpleMathParser.VARIABLE)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(SimpleMathParser.BRACE_R)
            self.state = 121
            self.match(SimpleMathParser.CURLY_L)
            self.state = 122
            self.body()
            self.state = 123
            self.match(SimpleMathParser.CURLY_R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_function_call

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionCallContext(Function_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.Function_callContext
            super().__init__(parser)
            self.funcName = None # Token
            self.copyFrom(ctx)

        def BRACE_L(self):
            return self.getToken(SimpleMathParser.BRACE_L, 0)
        def BRACE_R(self):
            return self.getToken(SimpleMathParser.BRACE_R, 0)
        def NAME(self):
            return self.getToken(SimpleMathParser.NAME, 0)
        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleMathParser.ValueContext)
            else:
                return self.getTypedRuleContext(SimpleMathParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)



    def function_call(self):

        localctx = SimpleMathParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            localctx = SimpleMathParser.FunctionCallContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            localctx.funcName = self.match(SimpleMathParser.NAME)
            self.state = 126
            self.match(SimpleMathParser.BRACE_L)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleMathParser.SUBTRACT) | (1 << SimpleMathParser.BRACE_L) | (1 << SimpleMathParser.EXCL) | (1 << SimpleMathParser.VARIABLE) | (1 << SimpleMathParser.NUMBER) | (1 << SimpleMathParser.STR) | (1 << SimpleMathParser.NAME))) != 0):
                self.state = 127
                self.value(0)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(SimpleMathParser.BRACE_R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleMathParser.RULE_return_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReturnCommandContext(Return_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleMathParser.Return_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(SimpleMathParser.RETURN, 0)
        def value(self):
            return self.getTypedRuleContext(SimpleMathParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnCommand" ):
                return visitor.visitReturnCommand(self)
            else:
                return visitor.visitChildren(self)



    def return_command(self):

        localctx = SimpleMathParser.Return_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_return_command)
        self._la = 0 # Token type
        try:
            localctx = SimpleMathParser.ReturnCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(SimpleMathParser.RETURN)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleMathParser.SUBTRACT) | (1 << SimpleMathParser.BRACE_L) | (1 << SimpleMathParser.EXCL) | (1 << SimpleMathParser.VARIABLE) | (1 << SimpleMathParser.NUMBER) | (1 << SimpleMathParser.STR) | (1 << SimpleMathParser.NAME))) != 0):
                self.state = 136
                self.value(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(SimpleMathParser.COMMENT, 0)

        def getRuleIndex(self):
            return SimpleMathParser.RULE_comment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):
